[project]
name = "rl-fuzz-bot"
version = "0.0.1"
description = "Reinforcement-learning powered message-sequence fuzzer"
authors = [{ name = "Kimia Goodarzi" }]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest",
  "gymnasium",
  "stable-baselines3",
  "pandas",
  "numpy",
  "rich",
  "ruff",
  "black",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"
